@@ -11,5 +11,8 @@
     <title>Papr</title>
   </head>
   <body>
+    <nav class="navbar navbar-light bg-light fixed-top" style="border: 2px solid gray">
+      <a class="navbar-brand" href="#">Navbar</a>
+    </nav>
     <!-- Optional JavaScript; choose one of the two! -->
 
