@@ -1,5 +1,9 @@
 0.0.19 (in progress)
-- bugfix: less is confused when showing lines with escape sequences having as many characters as the terminal size
+- TODO: merge multiple lines in title to one when fetching a paper
+- TODO: run local webserver
+- feature: export to HTML (markdown is converted to HTML)
+- markdown (.tmp -> .tmp.md)
+- bugfix: less is confused when showing lines with escape sequences having as many chadc racters as the terminal size
 - feature: split long lines at spaces when shown with less so that words are not split
 
 0.0.18
